tests/parsing/smtlib/v2.6/errors/082_define-sort_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/082_define-sort_unclosed_1.smt2", line 2, character 25-26:
2 | (define-sort foo () bool _)
                             ^
Error while parsing a sort definition, read the reserved word '_',
      but expected a closing parenthesis.
